--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "npx ts-node server.ts"
+    "server": "nodemon server.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20",
     "prisma": "^4.8.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
