Updates for everyone!!!!

--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,16 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/luxon": "^3.2.0",
     "@types/react-animals": "^0.0.1",
+    "@types/react-dropzone": "^5.1.0",
     "axios": "^1.2.1",
+    "form-data": "^4.0.0",
+    "luxon": "^3.2.1",
     "react": "^18.2.0",
     "react-animals": "^0.0.82",
     "react-dom": "^18.1.0",
+    "react-dropzone": "^14.2.3",
     "react-hierarchy-chart": "^0.0.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3"
