--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@prisma/client": "^4.8.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/formidable": "^2.0.5",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0"
   }
 }
