--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/react-dropzone": "^5.1.0",
     "axios": "^1.2.1",
     "form-data": "^4.0.0",
+    "framer-motion": "^8.4.3",
     "luxon": "^3.2.1",
     "react": "^18.2.0",
     "react-animals": "^0.0.82",
