--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tanstack/react-query": "^4.24.10",
+    "@tanstack/react-query-devtools": "^4.24.13",
     "@types/luxon": "^3.2.0",
     "@types/react-animals": "^0.0.1",
     "@types/react-dropzone": "^5.1.0",
